# ftcon25usa-slides

./: README.md  firebase.json  pubspec.yaml
android/app/: build.gradle.kts
android/app/src/main/: AndroidManifest.xml
ios/Runner/: Info.plist
ios/Runner.xcodeproj/: project.pbxproj
lib/: firebase_options.dart  main.dart  page_slider_controller.dart  providers.dart
lib/rive_native/: CHANGELOG.md  Makefile  README.md  analysis_options.yaml  hash.txt  pubspec.yaml  runtime_exclude.txt  version.txt
lib/rive_native/android/: CMakeLists.txt  build.gradle  settings.gradle
lib/rive_native/android/src/main/: AndroidManifest.xml
lib/rive_native/android/src/main/kotlin/app/rive/rive_native/: RiveNativePlugin.kt
lib/rive_native/example/: firebase.json  pubspec.yaml
lib/rive_native/example/android/app/: google-services.json
lib/rive_native/example/assets/: clicker.riv  duuprtransport.riv  hero.riv  hunter_x_v2.riv  out_of_band.riv  rive_slides.rev  rive_slides.riv  tiger.riv
lib/rive_native/example/ios/Runner/: GoogleService-Info.plist
lib/rive_native/example/ios/Runner.xcodeproj/: project.pbxproj
lib/rive_native/example/lib/: app.dart  enums.dart  firebase_options.dart  main.dart  page_slider_controller.dart  providers.dart  rive_player.dart  utils.dart
lib/rive_native/example/lib/data/models/: slide_model.dart
lib/rive_native/example/lib/data/repositories/: slides_data_repository.dart
lib/rive_native/example/lib/data/viewmodels/: slides_viewmodel.dart
lib/rive_native/example/lib/demos/: demos.dart  hero_demo.dart  hunter_x.dart
lib/rive_native/example/lib/examples/: basic.dart  data_binding.dart  error_artboard_does_not_exist.dart  events.dart  examples.dart  hit_test_behavior.dart  out_of_band_assets.dart  responsive_layout.dart  state_machine_nested_inputs.dart  text_runs.dart  text_runs_nested.dart  ticker_mode.dart  time_dilation.dart
lib/rive_native/example/lib/slides/: presentation_notes.dart  rive_slide.dart  slides_wrapper.dart
lib/rive_native/example/lib/widgets/: clicker.dart
lib/rive_native/example/macos/Runner.xcodeproj/: project.pbxproj
lib/rive_native/ios/: rive_native.podspec
lib/rive_native/ios/Classes/: rive_native_plugin.h  rive_native_plugin.mm
lib/rive_native/lib/: layout_engine.dart  math.dart  platform.dart  rive_audio.dart  rive_native.dart  rive_native_plugin_web.dart  rive_text.dart  scripting_workspace.dart  utilities.dart
lib/rive_native/lib/src/: buffered_render_paint.dart  buffered_render_path.dart  callback_handler.dart  defaults.dart  glyph_lookup.dart  paint_dirt.dart  platform_native.dart  platform_web.dart  rive.dart  rive_hit_test.dart  rive_native_ffi.dart  rive_native_web.dart  rive_renderer.dart  rive_widget.dart  wasm_version.dart
lib/rive_native/lib/src/ffi/: dynamic_library_helper.dart  flutter_renderer_ffi.dart  layout_engine_ffi.dart  rive_audio_ffi.dart  rive_data_binding_ffi.dart  rive_event_ffi.dart  rive_ffi.dart  rive_ffi_reference.dart  rive_renderer_ffi.dart  rive_text_ffi.dart  scripting_workspace_ffi.dart
lib/rive_native/lib/src/math/: aabb.dart  hit_test.dart  mat2d.dart  path_types.dart  segment2d.dart  transform_components.dart  vec2d.dart
lib/rive_native/lib/src/utilities/: dependency_sorter.dart  list_equality.dart  utilities.dart
lib/rive_native/lib/src/utilities/binary_buffer/: binary_reader.dart  binary_writer.dart
lib/rive_native/lib/src/web/: flutter_renderer_web.dart  layout_engine_web.dart  rive_audio_web.dart  rive_renderer_web.dart  rive_text_web.dart  rive_web.dart  scripting_workspace_web.dart
lib/rive_native/linux/: CMakeLists.txt  rive_native_plugin.cpp
lib/rive_native/linux/include/rive_native/: rive_native_plugin.h
lib/rive_native/macos/: rive_native.podspec
lib/rive_native/macos/Classes/: RiveNativePlugin.swift  rive_native_plugin.h  rive_native_plugin.mm
lib/rive_native/native/: build.sh  premake5.lua
lib/rive_native/native/include/rive_native/: external.hpp  external_objc.h  read_write_ring.hpp  rive_binding.hpp  swapchain.hpp
lib/rive_native/native/platform/: dependency.lua
lib/rive_native/native/platform/android/: rive_native_android.cpp
lib/rive_native/native/platform/wasm/: externs.js  init.js  package.json  scripting_work_callbacks.js  webgl_factory.cpp
lib/rive_native/native/platform/windows/: rive_native_windows.cpp  suppress_windows_warnings.lua
lib/rive_native/native/src/: audio_decode_worker.hpp  flutter_renderer.cpp  layout_engine_binding.cpp  pls_binding.mm  read_write_ring.cpp  renderer_binding.cpp  rive_audio_binding.cpp  rive_binding.cpp  text_binding.cpp
lib/rive_native/native/wasm/: package.json  publish_wasm.sh
lib/rive_native/test/: api_integrity_test.dart  data_binding_test.dart  events_test.dart  hit_test.dart  nested_input_test.dart  out_of_band_assets_test.dart  path_test.dart  text_runs_test.dart
lib/rive_native/test/assets/: databinding.riv  electrified_button_simple.riv  hit_test_pass_through.riv  joystick_handle_source.riv  off_road_car.riv  rigging_a_character.riv  runtime_nested_inputs.riv  runtime_nested_text_runs.riv  spilled_time.riv  text_run_test.riv  tree_loading_bar.riv
lib/rive_native/test/assets/batch_rivs/: circle-fui.riv
lib/rive_native/test/batch_tests/: golden_batch_test.dart
lib/rive_native/test/goldens/src/: golden_comparator.dart  rive_golden.dart
lib/rive_native/test/src/: utils.dart
lib/rive_native/windows/: CMakeLists.txt  rive_native_plugin.cpp  rive_native_plugin_c_api.cpp
lib/rive_native/windows/include/rive_native/: external.hpp  read_write_ring.hpp  rive_native_plugin.h  rive_native_plugin.hpp  swapchain.hpp
lib/widgets/: clicker.dart
linux/: CMakeLists.txt
linux/runner/: my_application.cc
macos/Flutter/: GeneratedPluginRegistrant.swift
macos/Runner.xcodeproj/: project.pbxproj
macos/Runner.xcodeproj/xcshareddata/xcschemes/: Runner.xcscheme
macos/Runner/Configs/: AppInfo.xcconfig
web/: index.html  manifest.json
windows/: CMakeLists.txt
windows/flutter/: generated_plugin_registrant.cc  generated_plugins.cmake
windows/runner/: Runner.rc  main.cpp
(+10 files in other folders)
